Changed the Trajectory Apps to use URL instead of Files, added a step to verify the needed channels are connected, implemented the choice to use Design or Live on simulations of response matrix. The Trajectory Display Aplication now has a live trajectory option and is also capable to load a previously saved trajectory from file.